Working on personal information for html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>LaRena Iocco</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">LaRena Iocco</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -29,8 +29,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#media">Media</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,19 +41,37 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        LaRena
+                        <span class="text-primary">Iocco</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        New York, NY · (707) 318-2084 ·
+                        <a href="mailto:Rosie.McQueen@gmail.com">Rosie.McQueen@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">
+                        How does a circus clown end up as a software engineer?
+                        I'm so glad you asked! I've always been a creative soul and never 
+                        realized how much creativity there is in coding until I tried it! 
+                        After pursuing theatre in college and attending the San Francisco 
+                        Clown Conservatory I achieved my lifelong dream of working 
+                        professionally in entertainment. I toured full-time for 8 years with 
+                        Ringling Bros. and Barnum & Bailey Circus in the U.S. and Mexico 
+                        and then Kinoshita Circus in Japan.  But travelling 50+ weeks out of 
+                        the year can wear down even the most seasoned traveller and I found 
+                        myself ready to settle down in one place and begin new adventures.
+                        <br />
+                        But what to do next with my life?  Enter coding! During the pandemic 
+                        I suddenly found myself with lots of extra time and was finally able 
+                        dive into software development full-time.  The pandemic has been hard 
+                        for a lot of us, but it allowed me the time to attend Hackbright 
+                        Academy and really focus my energy on engineering.  I'm very excited 
+                        about my future career in tech and to share my journey with other 
+                        aspiring devs from non-traditional backgrounds.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/larena-iocco/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/LaRenaiocco"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/RinglingRosie"><i class="fab fa-twitter"></i></a>
+                        <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
             </section>
@@ -63,36 +82,36 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <h3 class="mb-0">Office Manager</h3>
+                            <div class="subheading mb-3">Feld Entertainment</div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2018 - March 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <h3 class="mb-0">Clown</h3>
+                            <div class="subheading mb-3">Kinoshita Circus</div>
                             <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2016 - September 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
+                            <h3 class="mb-0">Ringling Bros. and Barnum & Bailey Circus</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
                             <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2010 - November 2016</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Design Intern</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
                             <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -102,20 +121,18 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <h3 class="mb-0">Hackbright Academy</h3>
+                            <div class="subheading mb-3">Certificate</div>
                             <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - September 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">San Francisco Clown Conservatory</h3>
+                            <div class="subheading mb-3">Certificate</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2007 - June 2008</span></div>
                     </div>
                 </div>
             </section>
@@ -124,26 +141,59 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Programming Languages</div>
+                    <!-- <ul class="list-inline dev-icons"> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-html5"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-angular"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-react"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-node-js"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-sass"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-less"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-wordpress"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-gulp"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-grunt"></i></li> -->
+                        <!-- <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
+                    <!-- </ul> -->
+                    <!-- <div class="subheading mb-3">Workflow</div> -->
                     <ul class="fa-ul mb-0">
-                        <li>
+                        <li>Python</li>
+                        <li>JavaScript</li>
+                        <li>SQL</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                    <div class="subheading mb-3">Frameworks & Libraries</div>
+                    <ul class="fa-ul mb-0">
+                        <li>Flask</li>
+                        <li>React</li>
+                        <li>jQuery</li>
+                        <li>Jinja</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                    <div class="subheading mb-3">Database & Indsutry Tools</div>
+                    <ul class="fa-ul mb-0">
+                        <li>PostgreSQL</li>
+                        <li>SQLAlchemy</li>
+                        <li>CLI</li>
+                        <li>Git, Github</li>
+                        <li>AWS Lightsail</li>
+                        <li>Google Maps APIs</li>
+                        <li>Cloudinary API</li>
+                        <li>Twilio API</li>
+                    </ul>
+                    <div class="subheading mb-3">Other</div>
+                    <ul class="fa-ul mb-0">
+                        <li>Agile Development and Scrum</li>
+                        <li>Podcast Hosting</li>
+                        <li>Public Speaking(scripted and live interview format)</li>
+                        <li>Video and audio editing</li>
+                    </ul>
+
+                        <!-- <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Python, JavaScript, SQL, HTML, CSS
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -156,7 +206,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Agile Development & Scrum
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
@@ -165,8 +215,19 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a web developer, I am an avid crafter.  You name it, I've 
+                        probably tried it; but my favorite ways to use my hands are crocheting toys, 
+                        embroidering and sewing with upcycled kimono fabric.  I also enjoy getting 
+                        creative with my baking and bake a lot of gluten-free goodies.
+                        <br />
+                        In my non-existent "spare time" I also cohost a 90's tv podcast called 
+                        "Pass the Hot Sauce". We are currently in our second seasion and have 
+                        released over 60 episodes. In addition to hosting, I also serve as the 
+                        backup audio engineer.
+                        <br />
+                        Theatre has always been a passion of mine and I look forward to the pandemic 
+                        ending so that I can attend Broadway shows again!
+                    </p>
                 </div>
             </section>
             <hr class="m-0" />
