Added profile picture

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <h1 class="mb-0">
                         LaRena
                         <span class="text-primary">Iocco</span>
+                        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
                     </h1>
                     <div class="subheading mb-5">
                         New York, NY · (707) 318-2084 ·
