--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Office Manager</h3>
                             <div class="subheading mb-3">Feld Entertainment</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <ul>
+                                <li><span><img class="star" src="assets/img/star.png" alt="" /></span>Doing Stuff Here</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2018 - March 2020</span></div>
                     </div>
