Moving profile images to img folder

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1 class="mb-0">
                         LaRena
                         <span class="text-primary">Iocco</span>
-                        <span><img id="clown" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/LaRenaClownSquare.jpg" alt="" /></span>
+                        <span><img id="clown" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/assets/img/LaRenaClownSquare.jpg" alt="" /></span>
                     </h1>
                     <div class="subheading mb-5">
                         New York, NY · (707) 318-2084 ·
@@ -86,7 +86,7 @@
                             <h3 class="mb-0">Office Manager</h3>
                             <div class="subheading mb-3">Feld Entertainment</div>
                             <ul>
-                                <li><span><img class="star" src="assets/img/star.png" alt="" /></span>Doing Stuff Here</li>
+                                <li>Doing Stuff Here</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2018 - March 2020</span></div>
