Working on resume

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">LaRena Iocco</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/assets/img/LaRenaSquare.jpg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/LaRenaSquare.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -43,7 +43,7 @@
                     <h1 class="mb-0">
                         LaRena
                         <span class="text-primary">Iocco</span>
-                        <span><img id="clown" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/assets/img/LaRenaClownSquare.jpg" alt="" /></span>
+                        <span><img id="clown" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/LaRenaClownSquare.jpg" alt="" /></span>
                     </h1>
                     <div class="subheading mb-5">
                         New York, NY · (707) 318-2084 ·
@@ -60,7 +60,7 @@
                         and then Kinoshita Circus in Japan.  But travelling 50+ weeks out of 
                         the year can wear down even the most seasoned traveller and I found 
                         myself ready to settle down in one place and begin new adventures.
-                        <br />
+                        <br /><br />
                         But what to do next with my life?  Enter coding! During the pandemic 
                         I suddenly found myself with lots of extra time and was finally able 
                         dive into software development full-time.  The pandemic has been hard 
@@ -86,7 +86,9 @@
                             <h3 class="mb-0">Office Manager</h3>
                             <div class="subheading mb-3">Feld Entertainment</div>
                             <ul>
-                                <li>Doing Stuff Here</li>
+                                <li>Coordinated the daily flow of the NYC based entertainment marketing office.</li>
+                                <li>Maintained budget and sales projection data for the regional VP.</li>
+                                <li>Supported marketing managers at PR events across the tri-state area.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2018 - March 2020</span></div>
@@ -94,27 +96,17 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Clown</h3>
-                            <div class="subheading mb-3">Kinoshita Circus</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <div class="subheading mb-3">Ringling Bros. and Barnum & Bailey Circus/Kinoshita Circus</div>
+                            <ul>
+                                <li>Coached 20+ new clowns as a senior performer.</li>
+                                <li>Collaborated with teams of up to 12 other clowns to develop original comic material for five different full-length shows.</li>
+                                <li>Consistently learned new skills and developed new acts to enhance performance.</li>
+                                <li>Engaged in public speaking and PR events on local and national tv programs including Saturday Night Live, The Late, Late Show with James Corden and many more.</li>
+                                <li>Performed in a high pressure environment for millions of people in the US, Mexico and Japan.</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">November 2016 - September 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2010 - September 2018</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Ringling Bros. and Barnum & Bailey Circus</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">November 2010 - November 2016</span></div>
-                    </div>
-                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div> -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -126,7 +118,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Hackbright Academy</h3>
                             <div class="subheading mb-3">Certificate</div>
-                            <div>Computer Science - Web Development Track</div>
+                            <ul>
+                                <li>Equipped with best practices of full stack software development in an in depth full-time engineering program.</li>
+                                <li>Expanded my knowledge of data structures, algorithms and programming languages.</li>
+                                <li>Built solo full stack web app, Adventure Awaits, with Agile/Scrum methods and deployed with AWS Lightsail.</li>
+                            </ul>>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2020 - September 2020</span></div>
                     </div>
@@ -134,6 +130,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">San Francisco Clown Conservatory</h3>
                             <div class="subheading mb-3">Certificate</div>
+                            <ul>
+                                <li>Full time education in clowning and circus arts with a focus on creating/obtaining lasting employment in entertainment.</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2007 - June 2008</span></div>
                     </div>
@@ -161,11 +160,11 @@
                     <!-- </ul> -->
                     <!-- <div class="subheading mb-3">Workflow</div> -->
                     <ul class="fa-ul mb-0">
-                        <li>Python</li>
-                        <li>JavaScript</li>
-                        <li>SQL</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
+                        <li class="list-inline-item">Python</li>
+                        <li class="list-inline-item">JavaScript</li>
+                        <li class="list-inline-item">SQL</li>
+                        <li class="list-inline-item">HTML</li>
+                        <li class="list-inline-item">CSS</li>
                     </ul>
                     <div class="subheading mb-3">Frameworks & Libraries</div>
                     <ul class="fa-ul mb-0">
