--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#media">Media</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
@@ -60,19 +60,56 @@
                         and then Kinoshita Circus in Japan.  But travelling 50+ weeks out of 
                         the year can wear down even the most seasoned traveller and I found 
                         myself ready to settle down in one place and begin new adventures.
-                        <br /><br />
+                    </p>
+                    <p class="lead mb-5">
                         But what to do next with my life?  Enter coding! During the pandemic 
                         I suddenly found myself with lots of extra time and was finally able 
                         dive into software development full-time.  The pandemic has been hard 
                         for a lot of us, but it allowed me the time to attend Hackbright 
                         Academy and really focus my energy on engineering.  I'm very excited 
                         about my future career in tech and to share my journey with other 
-                        aspiring devs from non-traditional backgrounds.</p>
+                        aspiring devs from non-traditional backgrounds.
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/larena-iocco/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/LaRenaiocco"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/RinglingRosie"><i class="fab fa-twitter"></i></a>
                         <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Projects -->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Adventure Awaits</h3>
+                            <a href="http://adventure-awaits.fun">http://adventure-awaits.fun</a>
+                            <p>Plan the perfect adventure with your friends.  Adventure Awaits 
+                                is a full stack web app that allows you, the user, to create 
+                                itineraries for trips, link those itineraries with your travel 
+                                companions and collaborate to plan the perfect getaway!  
+                                Adventure Awaits uses the Google Maps Javascript API as well 
+                                as Google Places, allowing the user to search for and add 
+                                destinations such as restaurants, museums and more to the trip.  
+                                I also used the Twilio API to allow users to get text updates 
+                                when their friends add activities to the trip!
+                            </p>
+                            <p><i>Tech Stack: Python, JavaScript, HTML/CSS, SQL, Flask, jQuery, 
+                                Bootstrap, Google Maps, Twilio</i></p>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <img src="assets/img/LaRenaClownSquare.jpg" />
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Community Library</h3>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2010 - September 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -122,7 +159,7 @@
                                 <li>Equipped with best practices of full stack software development in an in depth full-time engineering program.</li>
                                 <li>Expanded my knowledge of data structures, algorithms and programming languages.</li>
                                 <li>Built solo full stack web app, Adventure Awaits, with Agile/Scrum methods and deployed with AWS Lightsail.</li>
-                            </ul>>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2020 - September 2020</span></div>
                     </div>
@@ -159,12 +196,13 @@
                         <!-- <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
                     <!-- </ul> -->
                     <!-- <div class="subheading mb-3">Workflow</div> -->
-                    <ul class="fa-ul mb-0">
-                        <li class="list-inline-item">Python</li>
-                        <li class="list-inline-item">JavaScript</li>
-                        <li class="list-inline-item">SQL</li>
-                        <li class="list-inline-item">HTML</li>
-                        <li class="list-inline-item">CSS</li>
+                    <!-- <ul class="fa-ul mb-0"> -->
+                    <ul>
+                        <li>Python</li>
+                        <li>JavaScript</li>
+                        <li>SQL</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
                     </ul>
                     <div class="subheading mb-3">Frameworks & Libraries</div>
                     <ul class="fa-ul mb-0">
@@ -189,7 +227,7 @@
                     <ul class="fa-ul mb-0">
                         <li>Agile Development and Scrum</li>
                         <li>Podcast Hosting</li>
-                        <li>Public Speaking(scripted and live interview format)</li>
+                        <li>Public Speaking (scripted and live interview format)</li>
                         <li>Video and audio editing</li>
                     </ul>
 
@@ -221,13 +259,13 @@
                         probably tried it; but my favorite ways to use my hands are crocheting toys, 
                         embroidering and sewing with upcycled kimono fabric.  I also enjoy getting 
                         creative with my baking and bake a lot of gluten-free goodies.
-                        <br />
-                        In my non-existent "spare time" I also cohost a 90's tv podcast called 
+                    </p>
+                    <p>In my non-existent "spare time" I also cohost a 90's tv podcast called 
                         "Pass the Hot Sauce". We are currently in our second seasion and have 
                         released over 60 episodes. In addition to hosting, I also serve as the 
                         backup audio engineer.
-                        <br />
-                        Theatre has always been a passion of mine and I look forward to the pandemic 
+                    </p>
+                    <p>Theatre has always been a passion of mine and I look forward to the pandemic 
                         ending so that I can attend Broadway shows again!
                     </p>
                 </div>
