Adding images to project section

--- a/index.html
+++ b/index.html
@@ -83,34 +83,40 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Adventure Awaits</h3>
-                            <a href="http://adventure-awaits.fun">http://adventure-awaits.fun</a>
-                            <p>Plan the perfect adventure with your friends.  Adventure Awaits 
-                                is a full stack web app that allows you, the user, to create 
-                                itineraries for trips, link those itineraries with your travel 
-                                companions and collaborate to plan the perfect getaway!  
-                                Adventure Awaits uses the Google Maps Javascript API as well 
-                                as Google Places, allowing the user to search for and add 
-                                destinations such as restaurants, museums and more to the trip.  
-                                I also used the Twilio API to allow users to get text updates 
-                                when their friends add activities to the trip!
-                            </p>
-                            <p><i>Tech Stack: Python, JavaScript, HTML/CSS, SQL, Flask, jQuery, 
-                                Bootstrap, Google Maps, Twilio</i></p>
+                        <h3 class="mb-0">Adventure Awaits</h3>
+                        <a href="http://adventure-awaits.fun">http://adventure-awaits.fun</a>
+                        <p>Plan the perfect adventure with your friends.  Adventure Awaits 
+                            is a full stack web app that allows you, the user, to create 
+                            itineraries for trips, link those itineraries with your travel 
+                            companions and collaborate to plan the perfect getaway!  
+                            Adventure Awaits uses the Google Maps Javascript API as well 
+                            as Google Places, allowing the user to search for and add 
+                            destinations such as restaurants, museums and more to the trip.  
+                            I also used the Twilio API to allow users to get text updates 
+                            when their friends add activities to the trip!
+                        </p>
+                        <p><i>Tech Stack: Python, JavaScript, HTML/CSS, SQL, Flask, jQuery, 
+                            Bootstrap, Google Maps, Twilio, AWS Lightsail</i></p>
+                        <div class="project-image-div">
+                            <img class="project-image" src="assets/img/AdventureAwaits.png" />
                         </div>
-                        <div class="flex-shrink-0">
-                            <img src="assets/img/LaRenaClownSquare.jpg" />
+
+                        <h3 class="mb-0">Community Library</h3>
+                        <a href="http://52.205.251.141/">http://52.205.251.141</a>
+                        <p>Community Library is a full stack web app that I developed with 
+                            the goal of learning how to work with the Cloudinary image 
+                            repository API.  In the Community Library a user can search 
+                            through the database of books in their "community" based on titles, 
+                            authors and genres with the help of a variety of SQLAlchemy queries.  
+                            Users can also add or delete books from their personal library 
+                            (and the community database) and request to borrow books from other 
+                            users with the Twilio API.
+                        </p>
+                        <p><i>Tech Stack: Python, JavaScript, HTML/CSS, SQL, Flask, jQuery, 
+                            Bootstrap, Cloudinary, Twilio, AWS Lightsail</i></p>
+                        <div class="project-image-div">
+                            <img class="project-image" src="assets/img/Community Library.png" />
                         </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Community Library</h3>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">November 2010 - September 2018</span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
